# client-sdk-fidoiot

./: .checkpatch.conf  .clang-format  .gitignore  .pre-commit-config.yaml  .pylintrc  CMakeLists.txt  Doxyfile  Jenkinsfile.yml  Makefile  NOTICE  README.md  SECURITY.md  base.mk  build.sh  cDevice_Build.sh  cDevice_Build_NoUnitTest.sh  cDevice_Build_tpm.sh  gen_epid_blob.sh  install_openssl_curl.sh  keys_gen.sh  reuse_oc.sh  sdo_doxy.conf
.github/: Dockerfile  dependabot.yml
.github/workflows/: ai-review-cache.yaml  ai-review.yaml  codeql.yml  main.yaml
NOTICES/: EPID-SDK-NOTICE  NOTICE  OpenSSL-NOTICE  curl-libcurl-NOTICE  tpm2-tools
WinClientBuild/: 3rdParty_build.bat  README.md  WinClientBuild.sln  build.bat  csdk_build.bat  keys_gen.bat  setup.bat
WinClientBuild/WinClientBuild/: WinClientBuild.vcxproj  WinClientBuild.vcxproj.filters  win_client.c
WinClientBuild/crypto/: crypto.cpp  crypto.vcxproj  crypto.vcxproj.filters
WinClientBuild/device_modules/: device_modules.cpp  device_modules.vcxproj  device_modules.vcxproj.filters
WinClientBuild/lib/: lib.vcxproj  lib.vcxproj.filters
WinClientBuild/network/: network.vcxproj  network.vcxproj.filters
WinClientBuild/storage/: storage.vcxproj  storage.vcxproj.filters
WinClientBuild/tests/: tests.cpp  tests.vcxproj
app/: CMakeLists.txt  Makefile  app.mk  blob.c  main.c  se_provisioning.c
app/include/: blob.h  se_provisioning.h
cmake/: blob_path.cmake  cli_input.cmake  extension.cmake  pristine.cmake
crypto/: CMakeLists.txt  build.mk  conf.mk
crypto/common/: fdoAes.c  fdoCryptoCommon.c  fdoDevAttest.c  fdoDevSign.c  fdoHmac.c  fdoKeyExchange.c  fdoOvVerify.c  fdo_aes.c  fdo_crypto_common.c  fdo_dev_attest.c  fdo_dev_sign.c  fdo_hmac.c  fdo_key_exchange.c  fdo_ov_verify.c  fdokeyexchange_asym.c  sdoAes.c  sdoCryptoApi.h  sdoCryptoCommon.c  sdoCryptoCtx.h  sdoDevAttest.c  sdoDevSign.c  sdoHmac.c  sdoKeyExchange.c  sdoOvVerify.c  sdokeyexchange_asym.c
crypto/ecdsa/: ecdsa_privkey.c  ecdsa_privkey.h
crypto/epid/: epid.mk  epid_sdk_interface.c
crypto/include/: BN_support.h  base64.h  ec_key.h  epid.h  fdoCrypto.h  fdoCryptoCommons.h  fdoCryptoCtx.h  fdoCryptoHal.h  fdo_crypto.h  fdo_crypto_ctx.h  fdo_crypto_hal.h  mbedtls_random.h  sdoCrypto.h  sdoCryptoCtx.h  sdoCryptoHal.h  se_config.h  tpm20_Utils.h
crypto/mbedtls/: mbedtls_AESGCMRoutines.c  mbedtls_AESRoutines.c  mbedtls_DERRoutines.c  mbedtls_ECDSASignRoutines.c  mbedtls_ECDSAVerifyRoutines.c  mbedtls_RSAEncryptRoutines.c  mbedtls_RSAVerifyRoutines.c  mbedtls_SSLRoutines.c  mbedtls_base64.c  mbedtls_cryptoSupport.c  mbedtls_ec_csr.c  mbedtls_key_exchange_dh.c  mbedtls_key_exchange_ecdh.c  mbedtls_random.c
crypto/openssl/: BN_support.c  cse_cryptoSupport.c  cse_crypto_support.c  ec_key.c  ec_key.h  openssl_AESGCMRoutines.c  openssl_AESRoutines.c  openssl_AES_routines.c  openssl_DERRoutines.c  openssl_DER_routines.c  openssl_ECDSASignRoutines.c  openssl_ECDSAVerifyRoutines.c  openssl_ECDSA_sign_routines.c  openssl_ECDSA_verify_routines.c  openssl_RSAEncryptRoutines.c  openssl_RSAVerifyRoutines.c  openssl_SSLRoutines.c  openssl_SSL_routines.c  openssl_base64.c  openssl_cryptoSupport.c  openssl_crypto_support.c  openssl_csr.c  openssl_key_exchange_dh.c  openssl_key_exchange_ecdh.c  tpm20_ECDSASignRoutines.c  tpm20_ECDSA_sign_routines.c  tpm20_Utils.c
crypto/se/: se_AESGCMRoutines.c  se_AES_GCM_routines.c  se_ECDSASignRoutines.c  se_ECDSAVerifyRoutines.c  se_ECDSA_sign_routines.c  se_ECDSA_verify_routines.c  se_cryptoSupport.c  se_crypto_support.c  se_csr.c
cse/: CMakeLists.txt  clear_cse.c  cse_tools.c  cse_utils.c
cse/include/: clear_cse.h  cse_tools.h  cse_utils.h  fdo_cse.h
data/: ecdsa256privkey.pem  ecdsa384privkey.pem
device_modules/: CMakeLists.txt  Makefile
device_modules/fdo_sim/: fdo_sim.c  fdo_sim.h  fdo_sim_command.c  fdo_sim_download.c  fdo_sim_utils.h  sim_utils_linux.c
device_modules/fdo_sys/: fdo_sys.c  fdo_sys.h  fdo_sys_utils.h  fdomodules.h  sys_utils_linux.c
device_modules/fido_alliance/: fido_alliance.c  fido_alliance.h
docker_build/: Dockerfile  build.sh  docker-compose.yml
docs/: DI_setup.md  Hardware_Connection.xlsx  build_conf.md  cse.md  fdo_pri_manufacturer.md  introduction.md  linux.md  mbed_linux.md  mbedos.md  ownership_transfer.md  phase_1a_1b_guide.md  phase_2a_guide.md  phase_2b_rpi3.md  sample.txt  secure_element.md  security_implications.md  setup.md  supply_chain_toolkit.md  tpm.md  tpm_di_setup.md  tpm_ownership_transfer.md
hal/: .mbedignore
include/: fdo.h  fdomodules.h  sdo.h  sdomodules.h
lib/: CMakeLists.txt  cli.h  credentials_from_file.c  crypto_utils.c  fdo.c  fdoblockio.c  fdocred.c  fdonet.c  fdoprot.c  fdoprotctx.c  fdotypes.c  lib.mk  m-string.c  sdo.c  sdoblockio.c  sdocred.c  sdonet.c  sdoprot.c  sdoprotctx.c  sdotypes.c
mak/: crypto.mak
mbedos/: CMakeLists.txt  Makefile
network/: CMakeLists.txt  mbed_net_al.h  network.mk  network_if_linux.c  network_if_mbedos.c  network_if_mbedos2.cpp  rest_interface.c
storage/: CMakeLists.txt  build.mk  util.c
storage/include/: platform_utils.h  storage_al.h  tpm2_nv_storage.h
storage/linux/: platform_utils_if_linux.c  storage_if_linux.c  tpm2_nv_storage.c
storage/mbedos/: platform_utils_if_mbed.cpp  storage_if_mbedSD.cpp
tests/unit/: CMakeLists.txt  test_AESRoutines.c  test_AESRoutines.h  test_ECDSASignRoutines.c  test_ECDSAVerifyRoutines.c  test_RSARoutines.c  test_RSARoutines.h  test_SSLRoutines.c  test_base64.c  test_bn_support.c  test_credentials.c  test_crypto.h  test_cryptoSupport.c  test_cryptoUtils.c  test_fdo.c  test_fdoblockio.c  test_fdonet.c  test_fdoprot.c  test_fdotypes.c  test_hal_os.c  test_protctx.c  test_sample.c  test_sdo.c  test_sdoblockio.c  test_sdonet.c  test_sdoprot.c  test_sdotypes.c  test_utils.c
tests/unit/unity/include/: unity.h  unity_internals.h
tests/unit/unity/src/: unity.c
utils/: build_epid-sdk.sh  clear_tpm_nv.sh  flash_mbed.sh  install_openssl_curl.sh  install_tpm_libs.sh  install_tpm_libs_rhel.sh  keys_gen.sh  mp-build-all.sh  mp-test-all.sh  tpm_make_ready_ecdsa.sh  user_csr_req.sh
(+99 files in other folders)
